# bgme

./: .gitignore  LICENSE  README.md  pyproject.toml
src/data/: analyze_part.py  server_machine_dataset.py
src/eval/: Evaluation.py  EvaluationSim.py  F1Scores.py  Plots.py
src/models/: BGME.py  BGMEConfig.py  OnlineAnomalyConfig.py
src/sim/: AnomalyConfig.py  DataSim.py  DataSimConfig.py  __init__.py
